force-app/main/default/objects/Trainer_pokemon__c/Trainer_pokemon__c.object-meta.xml
<CustomObject>
    <description>Used in pokemon schema</description>
    <label>Trainer Pokémon</label>
    <nameField>
        <displayFormat>P{000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainer Pokémon</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>