force-app/main/default/objects/Trainer_pokemon__c/fields/Acquired__c.field-meta.xml
<CustomField>
    <fullName>Acquired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the trainer acquired this pokémon</inlineHelpText>
    <label>Acquired?</label>
    <type>Checkbox</type>
</CustomField>