force-app/main/default/objects/Trainer_pokemon__c/fields/Evolution_Item__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Item__c</fullName>
    <formula>Pokemon__r.Evolution_Item__r.Name</formula>
    <label>Evolution Item</label>
    <type>Text</type>
</CustomField>