force-app/main/default/objects/Trainer_pokemon__c/fields/Evolution_Level__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Level__c</fullName>
    <formula>Pokemon__r.Evolution_Level__c</formula>
    <label>Evolution Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>