force-app/main/default/objects/Trainer_pokemon__c/fields/Evolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Notes__c</fullName>
    <label>Evolution Notes</label>
    <length>49152</length>
    <type>LongTextArea</type>
</CustomField>