force-app/main/default/objects/Trainer_pokemon__c/fields/Evolution_Requires_Trade__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Requires_Trade__c</fullName>
    <formula>Pokemon__r.Trade_To_Evolve__c</formula>
    <label>Evolution Requires Trade</label>
    <type>Checkbox</type>
</CustomField>