force-app/main/default/objects/Trainer_pokemon__c/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <label>Pokémon</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Trainer Pokémon</relationshipLabel>
    <relationshipName>Trainer_Pokemon</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>