force-app/main/default/objects/Trainer_pokemon__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <inlineHelpText>The trainer this pokémon belongs to</inlineHelpText>
    <label>Trainer</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Trainer Pokémon</relationshipLabel>
    <relationshipName>Trainer_Pokemon</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>